# xmlBase

./: .cvsignore  CMakeLists.txt  ChangeLog  SConscript  azure-pipelines.yml  xmlBaseLib.py
cmt/: requirements
doc/: release.notes
src/: Dom.cxx  EResolver.cxx  IFile.cxx  XmlErrorHandler.cxx  XmlParser.cxx  main.cxx
src/docMan/: DocMan.cxx
src/test/: entity_test.cxx  test_IFile.cxx  test_altSchema.cxx  test_mem.cxx  test_write.cxx
xml/: ifile.dtd  myIFile.xml  mySchemaIFile.xml  test-dtd.xml  test-error.xml  test.xml
xmlBase/: Dom.h  EResolver.h  IFile.h  XmlErrorHandler.h  XmlParser.h
xmlBase/docMan/: DocClient.h  DocMan.h
